// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`NewPromptPage rendering tests collectionId defined - test 1`] = `
<div>
  <div
    class="flex h-screen flex-col bg-slate-50"
    data-testid="new-prompt-page"
  >
    <div
      class="flex h-full flex-col bg-slate-50"
      data-testid="prompt-edit"
    >
      <div
        class="sticky top-0 z-40 flex shrink-0 items-center border-b border-slate-200 bg-white px-6 py-3"
      >
        <nav
          aria-label="breadcrumb"
          data-slot="breadcrumb"
          data-testid="template-breadcrumb"
        >
          <ol
            class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
            data-slot="breadcrumb-list"
          >
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <a
                class="transition-colors hover:text-foreground"
                data-slot="breadcrumb-link"
                data-testid="root-link"
                href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
              >
                name 1
              </a>
            </li>
            <li
              aria-hidden="true"
              class="[&>svg]:size-3.5"
              data-slot="breadcrumb-separator"
              role="presentation"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </li>
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <span
                aria-current="page"
                aria-disabled="true"
                class="font-normal text-foreground"
                data-slot="breadcrumb-page"
                role="link"
              >
                Neuer Prompt
              </span>
            </li>
          </ol>
        </nav>
        <div
          class="ml-auto hidden lg:flex"
          data-testid="header-actions"
        >
          <div
            class="flex items-center gap-2"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
              data-slot="button"
              data-testid="cancel-btn"
              href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
              type="button"
            >
              Abbrechen
            </a>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer bg-blue-700 hover:bg-blue-800"
              data-slot="button"
              data-testid="save-btn"
              type="button"
            >
              Prompt erstellen
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto"
      >
        <div
          class="mx-auto max-w-5xl px-6 py-8"
        >
          <div
            class="space-y-4"
            data-testid="prompt-edit-form"
          >
            <form
              class="space-y-4"
              id="prompt-edit-form"
            >
              <div
                class="rounded-xl bg-white p-6 shadow-sm"
              >
                <section
                  class="space-y-4"
                  data-testid="basic-info"
                >
                  <p
                    class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
                  >
                    Basisinformationen
                  </p>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="title"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_5_-form-item"
                    >
                      Titel
                    </label>
                    <input
                      aria-describedby="_r_5_-form-item-description"
                      aria-invalid="false"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
                      data-slot="form-control"
                      data-testid="input"
                      id="_r_5_-form-item"
                      name="title"
                      placeholder="Geben Sie den Titel des Prompts ein"
                      value=""
                    />
                  </div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="description"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_6_-form-item"
                    >
                      Beschreibung
                    </label>
                    <textarea
                      aria-describedby="_r_6_-form-item-description"
                      aria-invalid="false"
                      class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
                      data-slot="form-control"
                      data-testid="textarea"
                      id="_r_6_-form-item"
                      name="description"
                      placeholder="Beschreiben Sie den Zweck dieses Prompts"
                      rows="3"
                    />
                  </div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="model"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_7_-form-item"
                    >
                      KI Modell
                    </label>
                    <div
                      data-slot="popover"
                      data-testid="mock-react-popover-root"
                    >
                      <button
                        aria-describedby="_r_7_-form-item-description"
                        aria-expanded="false"
                        aria-invalid="false"
                        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
                        data-slot="popover-trigger"
                        data-testid="combobox-trigger"
                        id="_r_7_-form-item"
                        role="combobox"
                        type="button"
                      >
                        <span
                          class="truncate text-muted-foreground"
                        >
                          Modell auswählen oder erstellen
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m7 15 5 5 5-5"
                          />
                          <path
                            d="m7 9 5-5 5 5"
                          />
                        </svg>
                      </button>
                      <div
                        data-testid="mock-react-popover-portal"
                      />
                    </div>
                  </div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="categories"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_8_-form-item"
                    >
                      Kategorien
                    </label>
                    <div
                      data-slot="popover"
                      data-testid="mock-react-popover-root"
                    >
                      <button
                        aria-expanded="false"
                        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
                        data-slot="popover-trigger"
                        data-testid="combobox-trigger"
                        role="combobox"
                        type="button"
                      >
                        <span
                          class="truncate text-muted-foreground"
                        >
                          Kategorie hinzufügen
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m7 15 5 5 5-5"
                          />
                          <path
                            d="m7 9 5-5 5 5"
                          />
                        </svg>
                      </button>
                      <div
                        data-testid="mock-react-popover-portal"
                      />
                    </div>
                  </div>
                </section>
              </div>
              <div
                class="rounded-xl bg-white p-6 shadow-sm"
              >
                <div
                  class="group/tabs flex gap-2 data-[orientation=horizontal]:flex-col"
                  data-orientation="horizontal"
                  data-slot="tabs"
                  data-testid="prompt-form-tabs"
                  orientation="horizontal"
                >
                  <div
                    class="mb-2 flex items-center justify-between"
                  >
                    <div
                      class="group/tabs-list inline-flex w-fit items-center justify-center rounded-lg p-[3px] text-muted-foreground group-data-[orientation=horizontal]/tabs:h-9 group-data-[orientation=vertical]/tabs:h-fit group-data-[orientation=vertical]/tabs:flex-col data-[variant=line]:rounded-none bg-muted"
                      data-slot="tabs-list"
                      data-testid="mock-react-tabs-list"
                      data-variant="default"
                    >
                      <button
                        class="relative inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap text-foreground/60 transition-all group-data-[orientation=vertical]/tabs:w-full group-data-[orientation=vertical]/tabs:justify-start hover:text-foreground focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:outline-1 focus-visible:outline-ring disabled:pointer-events-none disabled:opacity-50 group-data-[variant=default]/tabs-list:data-[state=active]:shadow-sm group-data-[variant=line]/tabs-list:data-[state=active]:shadow-none dark:text-muted-foreground dark:hover:text-foreground [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 group-data-[variant=line]/tabs-list:bg-transparent group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:border-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent data-[state=active]:bg-background data-[state=active]:text-foreground dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 dark:data-[state=active]:text-foreground after:absolute after:bg-foreground after:opacity-0 after:transition-opacity group-data-[orientation=horizontal]/tabs:after:inset-x-0 group-data-[orientation=horizontal]/tabs:after:bottom-[-5px] group-data-[orientation=horizontal]/tabs:after:h-0.5 group-data-[orientation=vertical]/tabs:after:inset-y-0 group-data-[orientation=vertical]/tabs:after:-right-1 group-data-[orientation=vertical]/tabs:after:w-0.5 group-data-[variant=line]/tabs-list:data-[state=active]:after:opacity-100"
                        data-slot="tabs-trigger"
                        data-state="active"
                        data-testid="editor-tab-trigger"
                        type="button"
                      >
                        Prompt
                      </button>
                      <button
                        class="relative inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap text-foreground/60 transition-all group-data-[orientation=vertical]/tabs:w-full group-data-[orientation=vertical]/tabs:justify-start hover:text-foreground focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:outline-1 focus-visible:outline-ring disabled:pointer-events-none disabled:opacity-50 group-data-[variant=default]/tabs-list:data-[state=active]:shadow-sm group-data-[variant=line]/tabs-list:data-[state=active]:shadow-none dark:text-muted-foreground dark:hover:text-foreground [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 group-data-[variant=line]/tabs-list:bg-transparent group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:border-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent data-[state=active]:bg-background data-[state=active]:text-foreground dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 dark:data-[state=active]:text-foreground after:absolute after:bg-foreground after:opacity-0 after:transition-opacity group-data-[orientation=horizontal]/tabs:after:inset-x-0 group-data-[orientation=horizontal]/tabs:after:bottom-[-5px] group-data-[orientation=horizontal]/tabs:after:h-0.5 group-data-[orientation=vertical]/tabs:after:inset-y-0 group-data-[orientation=vertical]/tabs:after:-right-1 group-data-[orientation=vertical]/tabs:after:w-0.5 group-data-[variant=line]/tabs-list:data-[state=active]:after:opacity-100"
                        data-slot="tabs-trigger"
                        data-state="inactive"
                        data-testid="variables-tab-trigger"
                        type="button"
                      >
                        Platzhalter
                      </button>
                    </div>
                    <button
                      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer text-slate-500 hover:text-slate-900"
                      data-slot="button"
                      data-testid="expand-editor-btn"
                      title="Vergrößern"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-maximize2 lucide-maximize-2 h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 3h6v6"
                        />
                        <path
                          d="m21 3-7 7"
                        />
                        <path
                          d="m3 21 7-7"
                        />
                        <path
                          d="M9 21H3v-6"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="flex-1 outline-none"
                    data-slot="tabs-content"
                    data-testid="prompt-editor-tab"
                  >
                    <section
                      class="space-y-4"
                      data-testid="prompt-text"
                    >
                      <p
                        class="text-sm text-slate-500"
                      >
                        Verwenden Sie
                         
                        <code
                          class="rounded bg-slate-100 px-1 py-0.5"
                        >
                          {{feld_name}}
                        </code>
                         
                        für Platzhalter, die durch Ihre Felder ersetzt werden
                      </p>
                      <div
                        class="grid gap-2"
                        data-slot="form-item"
                        data-testid="content"
                      >
                        <div
                          class="border border-slate-200 rounded-lg overflow-hidden bg-white"
                          data-testid="tiptap-editor"
                        >
                          <div
                            class="flex flex-wrap gap-1 p-2 border-b border-slate-200 bg-slate-50"
                            data-testid="toolbar"
                          >
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Bold"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-bold w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Italic"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-italic w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <line
                                  x1="19"
                                  x2="10"
                                  y1="4"
                                  y2="4"
                                />
                                <line
                                  x1="14"
                                  x2="5"
                                  y1="20"
                                  y2="20"
                                />
                                <line
                                  x1="15"
                                  x2="9"
                                  y1="4"
                                  y2="20"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Underline"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-underline w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6 4v6a6 6 0 0 0 12 0V4"
                                />
                                <line
                                  x1="4"
                                  x2="20"
                                  y1="20"
                                  y2="20"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Strikethrough"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-strikethrough w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16 4H9a3 3 0 0 0-2.83 4"
                                />
                                <path
                                  d="M14 12a4 4 0 0 1 0 8H6"
                                />
                                <line
                                  x1="4"
                                  x2="20"
                                  y1="12"
                                  y2="12"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Heading 1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-heading1 lucide-heading-1 w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M4 12h8"
                                />
                                <path
                                  d="M4 18V6"
                                />
                                <path
                                  d="M12 18V6"
                                />
                                <path
                                  d="m17 12 3-2v8"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Heading 2"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-heading2 lucide-heading-2 w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M4 12h8"
                                />
                                <path
                                  d="M4 18V6"
                                />
                                <path
                                  d="M12 18V6"
                                />
                                <path
                                  d="M21 18h-4c0-4 4-3 4-6 0-1.5-2-2.5-4-1"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Heading 3"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-heading3 lucide-heading-3 w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M4 12h8"
                                />
                                <path
                                  d="M4 18V6"
                                />
                                <path
                                  d="M12 18V6"
                                />
                                <path
                                  d="M17.5 10.5c1.7-1 3.5 0 3.5 1.5a2 2 0 0 1-2 2"
                                />
                                <path
                                  d="M17 17.5c2 1.5 4 .3 4-1.5a2 2 0 0 0-2-2"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Bullet List"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-list w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M3 5h.01"
                                />
                                <path
                                  d="M3 12h.01"
                                />
                                <path
                                  d="M3 19h.01"
                                />
                                <path
                                  d="M8 5h13"
                                />
                                <path
                                  d="M8 12h13"
                                />
                                <path
                                  d="M8 19h13"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Numbered List"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-list-ordered w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11 5h10"
                                />
                                <path
                                  d="M11 12h10"
                                />
                                <path
                                  d="M11 19h10"
                                />
                                <path
                                  d="M4 4h1v5"
                                />
                                <path
                                  d="M4 9h2"
                                />
                                <path
                                  d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Align Left"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-text-align-start w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 5H3"
                                />
                                <path
                                  d="M15 12H3"
                                />
                                <path
                                  d="M17 19H3"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Align Center"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-text-align-center w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 5H3"
                                />
                                <path
                                  d="M17 12H7"
                                />
                                <path
                                  d="M19 19H5"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Align Right"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-text-align-end w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 5H3"
                                />
                                <path
                                  d="M21 12H9"
                                />
                                <path
                                  d="M21 19H7"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Code Block"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-code w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m16 18 6-6-6-6"
                                />
                                <path
                                  d="m8 6-6 6 6 6"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Quote"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-quote w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                                />
                                <path
                                  d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Undo"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-undo w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M3 7v6h6"
                                />
                                <path
                                  d="M21 17a9 9 0 0 0-9-9 9 9 0 0 0-6 2.3L3 13"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Redo"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-redo w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 7v6h-6"
                                />
                                <path
                                  d="M3 17a9 9 0 0 1 9-9 9 9 0 0 1 6 2.3l3 2.7"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            data-testid="editor-content"
                          >
                            Editor Content
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end border-t border-slate-200 bg-white px-6 py-3 lg:hidden"
        data-testid="footer-actions"
      >
        <div
          class="flex items-center gap-2"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
            data-slot="button"
            data-testid="cancel-btn"
            href="/collections/457bf695-6f74-44aa-9b3a-e179ea9e8171"
            type="button"
          >
            Abbrechen
          </a>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer bg-blue-700 hover:bg-blue-800"
            data-slot="button"
            data-testid="save-btn"
            type="button"
          >
            Prompt erstellen
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`NewPromptPage rendering tests collectionId undefined - test 1`] = `
<div>
  <div
    class="flex h-screen flex-col bg-slate-50"
    data-testid="new-prompt-page"
  >
    <div
      class="flex h-full flex-col bg-slate-50"
      data-testid="prompt-edit"
    >
      <div
        class="sticky top-0 z-40 flex shrink-0 items-center border-b border-slate-200 bg-white px-6 py-3"
      >
        <nav
          aria-label="breadcrumb"
          data-slot="breadcrumb"
          data-testid="template-breadcrumb"
        >
          <ol
            class="flex flex-wrap items-center gap-1.5 text-sm break-words text-muted-foreground sm:gap-2.5"
            data-slot="breadcrumb-list"
          >
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <a
                class="transition-colors hover:text-foreground"
                data-slot="breadcrumb-link"
                data-testid="root-link"
                href="/prompts"
              >
                Prompts
              </a>
            </li>
            <li
              aria-hidden="true"
              class="[&>svg]:size-3.5"
              data-slot="breadcrumb-separator"
              role="presentation"
            >
              <svg
                aria-hidden="true"
                class="lucide lucide-chevron-right"
                fill="none"
                height="24"
                stroke="currentColor"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="2"
                viewBox="0 0 24 24"
                width="24"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="m9 18 6-6-6-6"
                />
              </svg>
            </li>
            <li
              class="inline-flex items-center gap-1.5"
              data-slot="breadcrumb-item"
            >
              <span
                aria-current="page"
                aria-disabled="true"
                class="font-normal text-foreground"
                data-slot="breadcrumb-page"
                role="link"
              >
                Neuer Prompt
              </span>
            </li>
          </ol>
        </nav>
        <div
          class="ml-auto hidden lg:flex"
          data-testid="header-actions"
        >
          <div
            class="flex items-center gap-2"
          >
            <a
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
              data-slot="button"
              data-testid="cancel-btn"
              href="/prompts"
              type="button"
            >
              Abbrechen
            </a>
            <button
              class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer bg-blue-700 hover:bg-blue-800"
              data-slot="button"
              data-testid="save-btn"
              type="button"
            >
              Prompt erstellen
            </button>
          </div>
        </div>
      </div>
      <div
        class="flex-1 overflow-y-auto"
      >
        <div
          class="mx-auto max-w-5xl px-6 py-8"
        >
          <div
            class="space-y-4"
            data-testid="prompt-edit-form"
          >
            <form
              class="space-y-4"
              id="prompt-edit-form"
            >
              <div
                class="rounded-xl bg-white p-6 shadow-sm"
              >
                <section
                  class="space-y-4"
                  data-testid="basic-info"
                >
                  <p
                    class="text-xs font-semibold tracking-widest text-slate-400 uppercase"
                  >
                    Basisinformationen
                  </p>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="title"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_0_-form-item"
                    >
                      Titel
                    </label>
                    <input
                      aria-describedby="_r_0_-form-item-description"
                      aria-invalid="false"
                      class="file:text-foreground placeholder:text-muted-foreground selection:bg-primary selection:text-primary-foreground dark:bg-input/30 border-input h-9 w-full min-w-0 rounded-md border bg-transparent px-3 py-1 text-base shadow-xs transition-[color,box-shadow] outline-none file:inline-flex file:h-7 file:border-0 file:bg-transparent file:text-sm file:font-medium disabled:pointer-events-none disabled:cursor-not-allowed disabled:opacity-50 md:text-sm focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive"
                      data-slot="form-control"
                      data-testid="input"
                      id="_r_0_-form-item"
                      name="title"
                      placeholder="Geben Sie den Titel des Prompts ein"
                      value=""
                    />
                  </div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="description"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_1_-form-item"
                    >
                      Beschreibung
                    </label>
                    <textarea
                      aria-describedby="_r_1_-form-item-description"
                      aria-invalid="false"
                      class="border-input placeholder:text-muted-foreground focus-visible:border-ring focus-visible:ring-ring/50 aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive dark:bg-input/30 flex field-sizing-content min-h-16 w-full rounded-md border bg-transparent px-3 py-2 text-base shadow-xs transition-[color,box-shadow] outline-none focus-visible:ring-[3px] disabled:cursor-not-allowed disabled:opacity-50 md:text-sm"
                      data-slot="form-control"
                      data-testid="textarea"
                      id="_r_1_-form-item"
                      name="description"
                      placeholder="Beschreiben Sie den Zweck dieses Prompts"
                      rows="3"
                    />
                  </div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="model"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_2_-form-item"
                    >
                      KI Modell
                    </label>
                    <div
                      data-slot="popover"
                      data-testid="mock-react-popover-root"
                    >
                      <button
                        aria-describedby="_r_2_-form-item-description"
                        aria-expanded="false"
                        aria-invalid="false"
                        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
                        data-slot="popover-trigger"
                        data-testid="combobox-trigger"
                        id="_r_2_-form-item"
                        role="combobox"
                        type="button"
                      >
                        <span
                          class="truncate text-muted-foreground"
                        >
                          Modell auswählen oder erstellen
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m7 15 5 5 5-5"
                          />
                          <path
                            d="m7 9 5-5 5 5"
                          />
                        </svg>
                      </button>
                      <div
                        data-testid="mock-react-popover-portal"
                      />
                    </div>
                  </div>
                  <div
                    class="grid gap-2"
                    data-slot="form-item"
                    data-testid="categories"
                  >
                    <label
                      class="flex items-center gap-2 text-sm leading-none font-medium select-none group-data-[disabled=true]:pointer-events-none group-data-[disabled=true]:opacity-50 peer-disabled:cursor-not-allowed peer-disabled:opacity-50 data-[error=true]:text-destructive"
                      data-error="false"
                      data-slot="form-label"
                      for="_r_3_-form-item"
                    >
                      Kategorien
                    </label>
                    <div
                      data-slot="popover"
                      data-testid="mock-react-popover-root"
                    >
                      <button
                        aria-expanded="false"
                        class="inline-flex items-center gap-2 whitespace-nowrap rounded-md text-sm transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 w-full justify-between font-normal"
                        data-slot="popover-trigger"
                        data-testid="combobox-trigger"
                        role="combobox"
                        type="button"
                      >
                        <span
                          class="truncate text-muted-foreground"
                        >
                          Kategorie hinzufügen
                        </span>
                        <svg
                          aria-hidden="true"
                          class="lucide lucide-chevrons-up-down ml-2 h-4 w-4 shrink-0 opacity-50"
                          fill="none"
                          height="24"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                          viewBox="0 0 24 24"
                          width="24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            d="m7 15 5 5 5-5"
                          />
                          <path
                            d="m7 9 5-5 5 5"
                          />
                        </svg>
                      </button>
                      <div
                        data-testid="mock-react-popover-portal"
                      />
                    </div>
                  </div>
                </section>
              </div>
              <div
                class="rounded-xl bg-white p-6 shadow-sm"
              >
                <div
                  class="group/tabs flex gap-2 data-[orientation=horizontal]:flex-col"
                  data-orientation="horizontal"
                  data-slot="tabs"
                  data-testid="prompt-form-tabs"
                  orientation="horizontal"
                >
                  <div
                    class="mb-2 flex items-center justify-between"
                  >
                    <div
                      class="group/tabs-list inline-flex w-fit items-center justify-center rounded-lg p-[3px] text-muted-foreground group-data-[orientation=horizontal]/tabs:h-9 group-data-[orientation=vertical]/tabs:h-fit group-data-[orientation=vertical]/tabs:flex-col data-[variant=line]:rounded-none bg-muted"
                      data-slot="tabs-list"
                      data-testid="mock-react-tabs-list"
                      data-variant="default"
                    >
                      <button
                        class="relative inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap text-foreground/60 transition-all group-data-[orientation=vertical]/tabs:w-full group-data-[orientation=vertical]/tabs:justify-start hover:text-foreground focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:outline-1 focus-visible:outline-ring disabled:pointer-events-none disabled:opacity-50 group-data-[variant=default]/tabs-list:data-[state=active]:shadow-sm group-data-[variant=line]/tabs-list:data-[state=active]:shadow-none dark:text-muted-foreground dark:hover:text-foreground [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 group-data-[variant=line]/tabs-list:bg-transparent group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:border-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent data-[state=active]:bg-background data-[state=active]:text-foreground dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 dark:data-[state=active]:text-foreground after:absolute after:bg-foreground after:opacity-0 after:transition-opacity group-data-[orientation=horizontal]/tabs:after:inset-x-0 group-data-[orientation=horizontal]/tabs:after:bottom-[-5px] group-data-[orientation=horizontal]/tabs:after:h-0.5 group-data-[orientation=vertical]/tabs:after:inset-y-0 group-data-[orientation=vertical]/tabs:after:-right-1 group-data-[orientation=vertical]/tabs:after:w-0.5 group-data-[variant=line]/tabs-list:data-[state=active]:after:opacity-100"
                        data-slot="tabs-trigger"
                        data-state="active"
                        data-testid="editor-tab-trigger"
                        type="button"
                      >
                        Prompt
                      </button>
                      <button
                        class="relative inline-flex h-[calc(100%-1px)] flex-1 items-center justify-center gap-1.5 rounded-md border border-transparent px-2 py-1 text-sm font-medium whitespace-nowrap text-foreground/60 transition-all group-data-[orientation=vertical]/tabs:w-full group-data-[orientation=vertical]/tabs:justify-start hover:text-foreground focus-visible:border-ring focus-visible:ring-[3px] focus-visible:ring-ring/50 focus-visible:outline-1 focus-visible:outline-ring disabled:pointer-events-none disabled:opacity-50 group-data-[variant=default]/tabs-list:data-[state=active]:shadow-sm group-data-[variant=line]/tabs-list:data-[state=active]:shadow-none dark:text-muted-foreground dark:hover:text-foreground [&_svg]:pointer-events-none [&_svg]:shrink-0 [&_svg:not([class*='size-'])]:size-4 group-data-[variant=line]/tabs-list:bg-transparent group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:border-transparent dark:group-data-[variant=line]/tabs-list:data-[state=active]:bg-transparent data-[state=active]:bg-background data-[state=active]:text-foreground dark:data-[state=active]:border-input dark:data-[state=active]:bg-input/30 dark:data-[state=active]:text-foreground after:absolute after:bg-foreground after:opacity-0 after:transition-opacity group-data-[orientation=horizontal]/tabs:after:inset-x-0 group-data-[orientation=horizontal]/tabs:after:bottom-[-5px] group-data-[orientation=horizontal]/tabs:after:h-0.5 group-data-[orientation=vertical]/tabs:after:inset-y-0 group-data-[orientation=vertical]/tabs:after:-right-1 group-data-[orientation=vertical]/tabs:after:w-0.5 group-data-[variant=line]/tabs-list:data-[state=active]:after:opacity-100"
                        data-slot="tabs-trigger"
                        data-state="inactive"
                        data-testid="variables-tab-trigger"
                        type="button"
                      >
                        Platzhalter
                      </button>
                    </div>
                    <button
                      class="inline-flex items-center justify-center whitespace-nowrap text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive hover:bg-accent dark:hover:bg-accent/50 h-8 rounded-md gap-1.5 px-3 has-[>svg]:px-2.5 cursor-pointer text-slate-500 hover:text-slate-900"
                      data-slot="button"
                      data-testid="expand-editor-btn"
                      title="Vergrößern"
                      type="button"
                    >
                      <svg
                        aria-hidden="true"
                        class="lucide lucide-maximize2 lucide-maximize-2 h-4 w-4"
                        fill="none"
                        height="24"
                        stroke="currentColor"
                        stroke-linecap="round"
                        stroke-linejoin="round"
                        stroke-width="2"
                        viewBox="0 0 24 24"
                        width="24"
                        xmlns="http://www.w3.org/2000/svg"
                      >
                        <path
                          d="M15 3h6v6"
                        />
                        <path
                          d="m21 3-7 7"
                        />
                        <path
                          d="m3 21 7-7"
                        />
                        <path
                          d="M9 21H3v-6"
                        />
                      </svg>
                    </button>
                  </div>
                  <div
                    class="flex-1 outline-none"
                    data-slot="tabs-content"
                    data-testid="prompt-editor-tab"
                  >
                    <section
                      class="space-y-4"
                      data-testid="prompt-text"
                    >
                      <p
                        class="text-sm text-slate-500"
                      >
                        Verwenden Sie
                         
                        <code
                          class="rounded bg-slate-100 px-1 py-0.5"
                        >
                          {{feld_name}}
                        </code>
                         
                        für Platzhalter, die durch Ihre Felder ersetzt werden
                      </p>
                      <div
                        class="grid gap-2"
                        data-slot="form-item"
                        data-testid="content"
                      >
                        <div
                          class="border border-slate-200 rounded-lg overflow-hidden bg-white"
                          data-testid="tiptap-editor"
                        >
                          <div
                            class="flex flex-wrap gap-1 p-2 border-b border-slate-200 bg-slate-50"
                            data-testid="toolbar"
                          >
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Bold"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-bold w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6 12h9a4 4 0 0 1 0 8H7a1 1 0 0 1-1-1V5a1 1 0 0 1 1-1h7a4 4 0 0 1 0 8"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Italic"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-italic w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <line
                                  x1="19"
                                  x2="10"
                                  y1="4"
                                  y2="4"
                                />
                                <line
                                  x1="14"
                                  x2="5"
                                  y1="20"
                                  y2="20"
                                />
                                <line
                                  x1="15"
                                  x2="9"
                                  y1="4"
                                  y2="20"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Underline"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-underline w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M6 4v6a6 6 0 0 0 12 0V4"
                                />
                                <line
                                  x1="4"
                                  x2="20"
                                  y1="20"
                                  y2="20"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Strikethrough"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-strikethrough w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16 4H9a3 3 0 0 0-2.83 4"
                                />
                                <path
                                  d="M14 12a4 4 0 0 1 0 8H6"
                                />
                                <line
                                  x1="4"
                                  x2="20"
                                  y1="12"
                                  y2="12"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Heading 1"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-heading1 lucide-heading-1 w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M4 12h8"
                                />
                                <path
                                  d="M4 18V6"
                                />
                                <path
                                  d="M12 18V6"
                                />
                                <path
                                  d="m17 12 3-2v8"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Heading 2"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-heading2 lucide-heading-2 w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M4 12h8"
                                />
                                <path
                                  d="M4 18V6"
                                />
                                <path
                                  d="M12 18V6"
                                />
                                <path
                                  d="M21 18h-4c0-4 4-3 4-6 0-1.5-2-2.5-4-1"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Heading 3"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-heading3 lucide-heading-3 w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M4 12h8"
                                />
                                <path
                                  d="M4 18V6"
                                />
                                <path
                                  d="M12 18V6"
                                />
                                <path
                                  d="M17.5 10.5c1.7-1 3.5 0 3.5 1.5a2 2 0 0 1-2 2"
                                />
                                <path
                                  d="M17 17.5c2 1.5 4 .3 4-1.5a2 2 0 0 0-2-2"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Bullet List"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-list w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M3 5h.01"
                                />
                                <path
                                  d="M3 12h.01"
                                />
                                <path
                                  d="M3 19h.01"
                                />
                                <path
                                  d="M8 5h13"
                                />
                                <path
                                  d="M8 12h13"
                                />
                                <path
                                  d="M8 19h13"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Numbered List"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-list-ordered w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M11 5h10"
                                />
                                <path
                                  d="M11 12h10"
                                />
                                <path
                                  d="M11 19h10"
                                />
                                <path
                                  d="M4 4h1v5"
                                />
                                <path
                                  d="M4 9h2"
                                />
                                <path
                                  d="M6.5 20H3.4c0-1 2.6-1.925 2.6-3.5a1.5 1.5 0 0 0-2.6-1.02"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Align Left"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-text-align-start w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 5H3"
                                />
                                <path
                                  d="M15 12H3"
                                />
                                <path
                                  d="M17 19H3"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Align Center"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-text-align-center w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 5H3"
                                />
                                <path
                                  d="M17 12H7"
                                />
                                <path
                                  d="M19 19H5"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Align Right"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-text-align-end w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 5H3"
                                />
                                <path
                                  d="M21 12H9"
                                />
                                <path
                                  d="M21 19H7"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Code Block"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-code w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="m16 18 6-6-6-6"
                                />
                                <path
                                  d="m8 6-6 6 6 6"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Quote"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-quote w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M16 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                                />
                                <path
                                  d="M5 3a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2 1 1 0 0 1 1 1v1a2 2 0 0 1-2 2 1 1 0 0 0-1 1v2a1 1 0 0 0 1 1 6 6 0 0 0 6-6V5a2 2 0 0 0-2-2z"
                                />
                              </svg>
                            </button>
                            <div
                              class="w-px h-6 bg-slate-300 mx-1"
                            />
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Undo"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-undo w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M3 7v6h6"
                                />
                                <path
                                  d="M21 17a9 9 0 0 0-9-9 9 9 0 0 0-6 2.3L3 13"
                                />
                              </svg>
                            </button>
                            <button
                              class="p-2 rounded hover:bg-slate-100 transition-colors text-slate-700"
                              title="Redo"
                              type="button"
                            >
                              <svg
                                aria-hidden="true"
                                class="lucide lucide-redo w-4 h-4"
                                fill="none"
                                height="24"
                                stroke="currentColor"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                                viewBox="0 0 24 24"
                                width="24"
                                xmlns="http://www.w3.org/2000/svg"
                              >
                                <path
                                  d="M21 7v6h-6"
                                />
                                <path
                                  d="M3 17a9 9 0 0 1 9-9 9 9 0 0 1 6 2.3l3 2.7"
                                />
                              </svg>
                            </button>
                          </div>
                          <div
                            data-testid="editor-content"
                          >
                            Editor Content
                          </div>
                        </div>
                      </div>
                    </section>
                  </div>
                </div>
              </div>
            </form>
          </div>
        </div>
      </div>
      <div
        class="flex justify-end border-t border-slate-200 bg-white px-6 py-3 lg:hidden"
        data-testid="footer-actions"
      >
        <div
          class="flex items-center gap-2"
        >
          <a
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive border bg-background shadow-xs hover:bg-accent hover:text-accent-foreground dark:bg-input/30 dark:border-input dark:hover:bg-input/50 h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer"
            data-slot="button"
            data-testid="cancel-btn"
            href="/prompts"
            type="button"
          >
            Abbrechen
          </a>
          <button
            class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-all disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg:not([class*='size-'])]:size-4 shrink-0 [&_svg]:shrink-0 outline-none focus-visible:border-ring focus-visible:ring-ring/50 focus-visible:ring-[3px] aria-invalid:ring-destructive/20 dark:aria-invalid:ring-destructive/40 aria-invalid:border-destructive text-primary-foreground h-9 px-4 py-2 has-[>svg]:px-3 cursor-pointer bg-blue-700 hover:bg-blue-800"
            data-slot="button"
            data-testid="save-btn"
            type="button"
          >
            Prompt erstellen
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
